# simple_motor_controller

./: Cargo.toml  Embed.toml  README.md  build.rs  device_pin_definition.txt
.cargo/: config.toml
fw/: Cargo.toml  build.rs  device_pin_definition.txt
fw/.cargo/: config.toml
fw/src/: encoder.rs  lib.rs  main.rs  motion.rs  motor.rs  pid.rs  serial.rs
fw/src/communication/: communication.rs
fw/src/motion/: mod.rs  motion.rs  motor.rs  pid.rs
fw/src/task/: mod.rs  motion_controller.rs  motion_data_publisher.rs  mpu6050_data_publisher.rs
host/: Cargo.toml
host/src/: client.rs  main.rs
proto/: command.proto  motor.proto  sensor.proto
protocol/: Cargo.toml
protocol/src/: lib.rs
s_curve/: Cargo.toml
s_curve/src/: lib.rs  main.rs
serial_tool/: Cargo.toml  build.rs
serial_tool/src/: communication.rs  lib.rs  main.rs  main_window.rs  mode_switch.rs  position_command_parser.rs  profile_measurement.rs  proto_packet.rs
serial_tool/src/controller/: position_command_parser.rs
serial_tool/src/view/: command_window.rs  connection_window.rs  control_mode_window.rs  error_window.rs  main_window.rs  mod.rs  profile_window.rs  window_wrapper.rs
src/: lib.rs  main.rs  serial.rs
tuning_tool/: Cargo.toml
tuning_tool/src/: communication.rs  lib.rs  main.rs  main_window.rs  mode_switch.rs  position_command_parser.rs
tuning_tool/src/controller/: communication.rs  mod.rs  mode_switch.rs  position_command_parser.rs
tuning_tool/src/view/: command_window.rs  connection_window.rs  control_mode_window.rs  main_window.rs  mod.rs  window_wrapper.rs
utils/: Cargo.toml
utils/src/: lib.rs
