[package]
name = "nucleo_f401re_rust"
version = "0.1.0"
edition = "2021"

# [dependencies]
# cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
# cortex-m-rt = "0.7.3"
# panic-halt = "1.0.0"
# rtt-target = "0.5.0"
# stm32f4xx-hal = "0.22.1"

[dependencies]
embedded-hal = "0.2"
nb = "1"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-halt = "0.2"
rtt-target = "0.5.0"
stm32f4xx-hal = { version = "0.22.1", features = ["stm32f401"] }
