[package]
name = "nucleo_f401re_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "stm32f401re", "unstable-pac", "memory-x", "time-driver-tim1", "exti", "chrono"] }
embassy-executor = { version = "0.6.2", git = "https://github.com/embassy-rs/embassy.git", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-futures = { version = "0.1.1", git = "https://github.com/embassy-rs/embassy.git" }
embassy-sync = { version = "0.6.0", git = "https://github.com/embassy-rs/embassy.git" }

defmt = "0.3.8"
defmt-rtt = "0.4.1"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }

[features]
print-debug = []
