[package]
name = "fw"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m            = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt         = { version = "0.7.0" }

embassy-stm32       = { version = "0.2.0", features = ["defmt", "stm32f303vc", "unstable-pac", "memory-x", "time-driver-tim1", "exti", "chrono"] }
embassy-executor    = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time        = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-futures     = { version = "0.1.1" }
embassy-sync        = { version = "0.6.0" }
embassy-usb         = { version = "0.4.0", features = ["defmt"] }

embedded-io         = { version = "0.6.1" }
embedded-io-async   = { version = "0.6.1" }

panic-probe         = { version = "0.3.2", features = ["print-defmt"] }

postcard-rpc        = { version = "0.11",  features = ["embassy-usb-0_4-server"] }
postcard            = { version = "1.0.10" }
postcard-schema     = { version = "0.2.1", features = ["derive"] }
serde               = { version = "1.0.219", default-features = false, features = ["derive"] }

defmt               = { version = "0.3.8" }
defmt-rtt           = { version = "0.4.1" }

static_cell         = { version = "2.1" }

heapless            = { version = "0.8.0" }

never               = { version = "0.1.0", default-features = false }

num-traits          = { version = "0.2", default-features = false }

utils               = { version = "0.1.0", path = "../utils", default-features = false }
s_curve             = { version = "0.1.0", path = "../s_curve", default-features = false }

[features]
default = []
debug-rx = []
debug-tx = []
debug-motor = []
debug-motion = []
