[package]
name = "host"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio               = { version = "1.44.2", features = ["rt-multi-thread", "macros", "time"] }

postcard-rpc        = { version = "0.11",  features = ["use-std", "raw-nusb"] }
postcard-schema     = { version = "0.2.1", features = ["derive"] }

protocol  = { version = "0.1.0", path = "../protocol", features = ["use-std"] }

