[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
serde               = { version = "1.0", default-features = false, features = ["derive"]}
postcard            = { version = "1.1.1" }
postcard-rpc        = { version = "=0.11.8" }
postcard-schema     = { version = "0.2.1" }

[features]
use-std = []
