[package]
name = "serial_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31.0"
egui_plot = "0.31.0"
env_logger = "0.11.6"
log = "0.4.26"
micropb = { version = "0.1.0", features = ["std", "alloc"] }
nom = "8.0.0"
serial_enumerator = "0.2.12"
serialport = "4.6.0"

utils = { version = "0.1.0", path = "../utils", features = ["std"] }

[build-dependencies]
micropb-gen = "0.1.0"
